# resonance

./: .gitignore
app/: app.json  package-lock.json  package.json
app/app/: types.tsx
app/app/(tabs)/: index.tsx
app/components/: LiveWire.tsx
client/: create_hume_configs.mjs  eslint.config.js  package-lock.json  package.json  vite.config.ts
client/public/: audio-processor.js
client/src/: config.ts  index.css  vite-env.d.ts
client/src/components/: AnalyticsDebugPanel.tsx  ContextInjectionPanel.tsx  EviConvoPanel.tsx  SensorMetricsPanel.tsx  SimControlPanel.tsx  SimulationInner.tsx  StagedIntakePanel.tsx  eviConvoPanel.tsx  metricGrpah.tsx  metricMeter.tsx
client/src/components/common/: Card.tsx
client/src/data/: datingPrompts.ts  homeConfigs.ts  scenarios.ts  trainingPrompts.ts
client/src/hooks/: useConversationData.tsx  useEviManager.tsx  usePreFlightCompiler.tsx  useSensorMetrics.tsx  useSimulationSession.tsx  useStageDirector.tsx  useVoiceAnalyticsEngine.tsx
client/src/pages/: App.tsx  Home.tsx  Simulation.tsx
client/src/types/: conversationAnalysis.ts  stagedSimulation.ts
client/src/utils/: audioAnalysis.ts  sessionStore.ts
documents/: blueprint.md  migration_guide.md  phase_1_design.md  phase_2_design.md  react_native_explained.md.resolved  rust_explained.md.resolved  simulation_design.md
server/: Cargo.toml
server/src/: api.rs  compiler.rs  conversation_analyzer.rs  deepgram.rs  gemini_client.rs  gemini_live.rs  gemini_msg.rs  gemini_parser.rs  main.rs  rubrics.rs  sensors.rs
server/src/gemini/: client.rs  mod.rs  types.rs
(+4 files in other folders)
