[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "ws"] }
futures = "0.3.31"
pitch-detection = "0.3.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
